优化基础模块，提升运行稳定性（2025-08-13）